--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node memory-server.js"
+  "start": "node start-all.js"
   },
   "keywords": [],
   "author": "",
